--- a/pag4.html
+++ b/pag4.html
@@ -67,11 +67,11 @@
     <p>Ajudou codando o front end das paginas </p>
     <h2>Isadora Volpin Barbosa N:19</h2>
     <p>Ajudou com a pesquisas</p>
-    <h2>Arthur Emanoel Corgozinho Jory N:03</h2>
+    <h2>Arthur Emanuel Corgozinho Jory N:03</h2>
     <p>Ajudou com a pesquisas</p>
-    <h2>Bruna Yukari Notoyaw N:05</h2>    
+    <h2>Bruna Yukari Notoya N:05</h2>    
     <p>Ajudou com a pesquisas</p>
-    <h2>Ruam Filipe de Oliveira Ferreira N:33</h2>    
+    <h2>Ruan Filipe de Oliveira Ferreira N:33</h2>    
     <p>Ajudou codando o front end das paginas</p>
     <h2>João Vitor Taietti Ferreira N:21  </h2>    
     <p>Ajudou codando o front end das paginas</p>
